--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "express": "^5.2.1",
     "mongoose": "^9.2.1",
     "morgan": "^1.10.1",
-    "stripe": "^20.3.1"
+    "stripe": "^20.3.1",
+    "micro": "^10.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.14"
