--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,10 @@
 {
     "version": 2,
-    "rewrites": [
-        {
-            "source": "/(.*)",
-            "destination": "/index.js"
-        }
+    "buildCommand": null,
+    "devCommand": "nodemon index.js",
+    "installCommand": "npm install",
+    "framework": null,
+    "regions": [
+        "cle1"
     ]
 }
